added DivideAndRule, Small refactor in selection sort,