@@ -5,7 +5,7 @@ import java.util.ArrayList;
 public class SelectionSort {
 
     static int findSmallestIndex(ArrayList<Integer> unsortedList) {
-        int min = unsortedList.get(0);
+        int min = unsortedList.getFirst();
         int smallestIndex = 0;
         for (int i = 0; i < unsortedList.size(); i++) {
             if (min > unsortedList.get(i)) {
@@ -15,7 +15,8 @@ public class SelectionSort {
         }
         return smallestIndex;
     }
-    public static ArrayList<Integer> selectionSort(ArrayList<Integer> unsortedList) {
+    // Can be not void
+    public static void selectionSort(ArrayList<Integer> unsortedList) {
         ArrayList <Integer> sortedList = new ArrayList <>();
         ArrayList<Integer> unsortedCopy = new ArrayList<>(unsortedList);
         for (int i = 0; i < unsortedList.size(); i++) {
@@ -25,6 +26,5 @@ public class SelectionSort {
         System.out.println("Not the fastest algorithm - done for educational purpose");
         System.out.println("Unsorted List: " + unsortedList);
         System.out.println("Sorted List: " + sortedList);
-        return sortedList;
     }
 }
